# snake3d

./: .gitignore  CMakeLists.txt  readme.txt
shaders/: f_phong.glsl  f_simplest.glsl  f_tbn.glsl  v_phong.glsl  v_simplest.glsl  v_spec.glsl  v_tbn.glsl
src/: GameApple.cpp  GameApple.h  GameBoard.cpp  GameBoard.h  GameCamera.cpp  GameCamera.h  GameClass.cpp  GameClass.h  GameInput.cpp  GameInput.h  GameSnake.cpp  GameSnake.h  SnakeGame.cpp  SnakeGame.h  camera.cpp  camera.h  libs.h  main_file.cpp  shaderprogram.cpp  shaderprogram.h  shaders.cpp  shaders.h  textures.cpp  textures.h
src/modeldata/: myCube.h  mykolo.h  myogn.h  mysnake_head.h
src/models/: ModelApple.cpp  ModelApple.h  ModelBase.cpp  ModelBase.h  ModelCube.cpp  ModelCube.h  ModelCylinder.cpp  ModelCylinder.h  ModelFloor.cpp  ModelFloor.h  ModelSnake.cpp  ModelSnake.h  ModelSnakeBodyCylinder.cpp  ModelSnakeBodyCylinder.h  ModelSnakeBodySphere.cpp  ModelSnakeBodySphere.h  ModelSnakeHead.cpp  ModelSnakeHead.h  ModelSnakeTail.cpp  ModelSnakeTail.h  ModelTeapot.cpp  ModelTeapot.h
